# oceanboard

./: LICENSE  README.md  build.gradle  meson.build  settings.gradle  style.css
data/: com.github.jorgemanzo.app.desktop  com.github.oceanboard.app.desktop
src/: Api.vala  Application.vala  Card.vala  HeaderBar.vala  MainWindow.vala  ScrollableColumnsView.vala
src/main/java/: Main.java
